--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@ $fontfamily: 'Open Sans',sans-serif;
 
 //<ПЕРЕМЕННЫЕ>
 $minwidth:320px;
-$mw:1080;
+$mw:1140;
 $md1:$mw+12;
 $md2:910;
 $md3:767.98;
@@ -32,5 +32,5 @@ $md4:479.98;
 //</ОСНОВНАЯ СЕТКА>
 
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>
-//@import "header.scss";
+@import "header.scss";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>
