--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,5 +4,6 @@ html(lang="en")
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		link(rel="stylesheet", href="css/style.css")
-		title Gulp_Template
+		title A X I T
 	body
+		include header.pug
