--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -2,7 +2,9 @@
 
 //@import url("https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700&display=swap&subset=cyrillic-ext");
 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:regular,600,600italic,700);
 
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,regular,700);
 /*@font-face {
   font-family: "BravoRGRegular";
   font-display: swap;
@@ -10,3 +12,8 @@
   font-weight: 400;
   font-style: normal;
 } */
+
+/*
+font-family: 'Raleway', sans-serif;
+font-family: 'Open Sans', sans-serif;
+*/
