add brand section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,4 +33,5 @@ $md4:479.98;
 
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>
 @import "header.scss";
+@import "brand.scss";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>
