--- a/src/pug/header.pug
+++ b/src/pug/header.pug
@@ -14,3 +14,8 @@ header.header
 					a.menu__link(href="#") Reviews
 				li
 					a.menu__link(href="#") Contact
+		.burger-icon
+			span
+			span
+			span
+		.burger-menu
