--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,16 +3,20 @@
 
   &__body {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     height: 72px;
+    @media (max-width: $md2+px) {
+      height: 54px;
+    }
+    @media (max-width:$md3+px) {
+      justify-content: flex-end;
+    }
   }
 
   &__logo {
-    flex: 1 1 auto;
-  }
-
-  &__menu {
-    flex: 1 1 auto;
+    position: relative;
+    z-index: 11;
   }
 }
 
@@ -32,6 +36,75 @@
     margin-right: 46px;
     &:last-child {
       margin: 0;
+    }
+  }
+}
+
+.header__burger {
+  display: none;
+}
+
+.burger-menu {
+  display: none;
+}
+.burger-icon {
+  display: none;
+}
+
+@media (max-width: $md3+px) {
+  .burger-icon {
+    display: block;
+    position: absolute;
+    top: 18px;
+    left: 10px;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+    span {
+      @include anim(0.3s, 0s);
+      top: 8px;
+      left: 0px;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+      &:first-child {
+        top: 0px;
+      }
+      &:last-child {
+        top: auto;
+        bottom: 0px;
+      }
+    }
+    &.active {
+      span {
+        @include scale(0);
+        &:first-child {
+          @include rotate(-45deg);
+          top: 8px;
+        }
+        &:last-child {
+          @include rotate(45deg);
+          bottom: 8px;
+        }
+      }
+    }
+  }
+  .burger-menu {
+    display: block;
+    position: fixed;
+    z-index: 4;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    left: -120%;
+    top: 0;
+    background-color: #000;
+    padding: 65px 10px 0px 10px;
+    @include anim(0.6s, 0s);
+    &.active {
+      left: 0;
     }
   }
 }
