fix burger-menu and add font-awesome

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -5,6 +5,13 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:regular,600,600italic,700);
 
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,regular,700);
+
+@import "awesome/scss/fontawesome";
+@import "awesome/scss/brands";
+@import "awesome/scss/regular";
+@import "awesome/scss/solid";
+@import "awesome/scss/v4-shims";
+
 /*@font-face {
   font-family: "BravoRGRegular";
   font-display: swap;
