--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,4 +35,5 @@ $md4:479.98;
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>
 @import "header.scss";
 @import "brand.scss";
+@import "social.scss";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>
