--- a/src/scss/brand.scss
+++ b/src/scss/brand.scss
@@ -4,6 +4,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: $md3+px) {
+      display: block;
+    }
   }
 }
 
@@ -47,6 +51,9 @@
       font-size: 24px;
       padding-bottom: 24px;
     }
+    @media (max-width: $md3+px) {
+      padding-bottom: 13px;
+    }
   }
 
   &__text {
@@ -59,10 +66,17 @@
       font-weight: 300;
       color: #ffffff;
     }
+
+    @media (max-width: $md3+px) {
+      margin: 0px 0px 20px 0px;
+    }
   }
 
   @media (max-width: $md2+px) {
     padding: 0px 0px 50px 0px;
+  }
+  @media (max-width: $md3+px) {
+    padding: 0px 0px 30px 0px;
   }
 }
 
@@ -103,6 +117,9 @@
       margin: 0px 0px 15px 0px;
     }
   }
+  @media (max-width: $md3+px) {
+    max-width: 360px;
+  }
 }
 
 .form {
@@ -111,8 +128,11 @@
   background-color: #fff;
   &__body {
     padding: 0 40px;
-    @media (max-width: 960px) {
+    @media (max-width: $md2+px) {
       padding: 0 25px;
+    }
+    @media (max-width: $md3+px) {
+      padding: 0 20px;
     }
   }
   &__input {
@@ -125,6 +145,9 @@
     border-bottom: 1px solid #bdbdbd;
     @media (max-width: $md2+px) {
       margin: 0px 0px 18px 0px;
+    }
+    @media (max-width: $md3+px) {
+      margin: 0px 0px 10px 0px;
     }
   }
 
@@ -140,6 +163,10 @@
     @media (max-width: $md2+px) {
       font-size: 12px;
       padding: 15px 0px;
+    }
+    @media (max-width: $md3+px) {
+      font-size: 10px;
+      padding: 12px 0px;
     }
   }
 }
