add social links

--- a/src/pug/social.pug
+++ b/src/pug/social.pug
@@ -1,9 +1,15 @@
 section.social
 	.social__body.container
 		.social__text.social-info
-			.social-info__title
-				Social Media
-			.social-info__text
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+			.social-info__title Social Media
+			.social-info__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
 		.social__links
-			<i class="fa fa-arrows" aria-hidden="true"></i>
+			<i class="fa fa-facebook" aria-hidden="true"></i>
+			<i class="fa fa-twitter" aria-hidden="true"></i>
+			<i class="fa fa-google-plus" aria-hidden="true"></i>
+			<i class="fa fa-pinterest-p" aria-hidden="true"></i>
+			<i class="fa fa-instagram" aria-hidden="true"></i>
+			<i class="fa fa-rss" aria-hidden="true"></i>
+
+
+
