--- a/src/scss/brand.scss
+++ b/src/scss/brand.scss
@@ -6,7 +6,14 @@
     align-items: center;
 
     @media (max-width: $md3+px) {
-      display: block;
+      flex-direction: column;
+      padding: 0px 10px 25px 10px;
+    }
+  }
+
+  &__intro {
+    @media (max-width: $md1+px) {
+      margin: 0 auto;
     }
   }
 }
@@ -118,7 +125,7 @@
     }
   }
   @media (max-width: $md3+px) {
-    max-width: 360px;
+    max-width: 300px;
   }
 }
 
