--- a/src/scss/social.scss
+++ b/src/scss/social.scss
@@ -1,6 +1,34 @@
 .social {
   &__body {
     display: flex;
+    align-items: center;
+    padding: 20px 0 20px 20px;
+  }
+
+  &__text{
+    flex: 0 1 361px;
+    margin: 0px 80px 0px 0px;
+  }
+
+  &__links {
+    .fa {
+      font-size: 48px;
+      color: #ccc;
+      margin: 0px 65px 0px 0px;
+      &:last-child {
+        margin: 0px;
+      }
+
+      @media (max-width: $md1+px) {
+        font-size: 24px;
+        margin: 0px 30px 0px 0px;
+      }
+      @media (max-width: $md3+px) {
+        font-size: 20px;
+        margin: 0px 20px 0px 0px;
+        padding: 0px 0px 10px 0px;
+      }
+    }
   }
 }
 
@@ -9,6 +37,7 @@
     font-size: 20px;
     font-weight: 700;
     color: #333333;
+    margin: 0px 0px 10px 0px;
   }
 
   &__text {
