make js part of slider

--- a/src/pug/tab.pug
+++ b/src/pug/tab.pug
@@ -1,11 +1,11 @@
 section.tab
 	.tab-body.container
 		.tab__selector.selector
-			.selector__item.selector-1.active(data-slider=".slider-item_1")
+			.selector__item.selector-1.active(data-slider="slider-item_1")
 				span tab1
-			.selector__item.selector-2(data-slider=".slider-item_2")
+			.selector__item.selector-2(data-slider="slider-item_2")
 				span tab2
-			.selector__item.selector-3(data-slider=".slider-item_3")
+			.selector__item.selector-3(data-slider="slider-item_3")
 				span tab3
 		.tab__item.slider-item.slider-item_1.visible
 			.slider-item__info.slider-info
