soft transitioning effect

--- a/src/pug/tab.pug
+++ b/src/pug/tab.pug
@@ -7,26 +7,27 @@ section.tab
 				span tab2
 			.selector__item.selector-3(data-slider="slider-item_3")
 				span tab3
-		.tab__item.slider-item.slider-item_1.visible
-			.slider-item__info.slider-info
-				.slider-info__title Tabs with soft transitioning effect.
-				.slider-info__text 
-					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
-					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
-				.slider-info__btn.btn
-					a.btn__link(href="#", target="_blank", rel="noopener noreferrer") Download
-			.slider-item__img
-				img(src="img/tab/tab.png", alt="", srcset="")
-		
-		.tab__item.slider-item.slider-item_2
-			.slider-item__info.slider-info
-				.slider-info__title Tabs with soft transitioning effect.
-				.slider-info__text 
-					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
-					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
-					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
-					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
-				.slider-info__btn.btn
-					a.btn__link(href="#", target="_blank", rel="noopener noreferrer") Download
-			.slider-item__img
-				img(src="img/tab/tab.png", alt="", srcset="")
+		.slider-body
+			.tab__item.slider-item.slider-item_1.visible
+				.slider-item__info.slider-info
+					.slider-info__title Tabs with soft transitioning effect.
+					.slider-info__text 
+						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
+						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+					.slider-info__btn.btn
+						a.btn__link(href="#", target="_blank", rel="noopener noreferrer") Download
+				.slider-item__img
+					img(src="img/tab/tab.png", alt="", srcset="")
+			
+			.tab__item.slider-item.slider-item_2
+				.slider-item__info.slider-info
+					.slider-info__title Tabs with soft transitioning effect.
+					.slider-info__text 
+						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
+						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
+						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+					.slider-info__btn.btn
+						a.btn__link(href="#", target="_blank", rel="noopener noreferrer") Download
+				.slider-item__img
+					img(src="img/tab/tab.png", alt="", srcset="")
