--- a/src/scss/tab.scss
+++ b/src/scss/tab.scss
@@ -3,8 +3,16 @@
   &__selector {
     margin: 0px 100px 0px 0px;
     @media (max-width: $md2+px) {
-      margin: 0px 50px 0px 0px;
+      margin: 0px 50px 30px 0px;
     }
+
+    @media (max-width: $md3+px) {
+      display: flex;
+    }
+  }
+
+  @media (max-width: $md2+px) {
+    min-height: 350px;
   }
 }
 
@@ -14,6 +22,9 @@
   padding: 147px 0 114px 0;
   @media (max-width: $md2+px) {
     padding: 70px 0 55px 0;
+  }
+  @media (max-width: $md3+px) {
+    display: block;
   }
 }
 
@@ -28,6 +39,12 @@
     margin: 0px 0px 1px 0px;
     &.active {
       background-color: #ff8b38;
+    }
+    @media (max-width: $md2+px) {
+      padding: 30px 20px;
+    }
+    @media (max-width: $md3+px) {
+      margin: 0px 1px 0px 0px;
     }
   }
 
