--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,5 +10,6 @@ html(lang="en")
 		include brand.pug
 		include social.pug
 		include tab.pug
+		include subListSection.pug
 		
 		script(src="js/main.js")
