--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,5 +37,6 @@ $md4:479.98;
 @import "brand.scss";
 @import "social.scss";
 @import "tab.scss";
+@import "subListSection.scss"
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>
