add standartPicture block

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,6 +10,7 @@ html(lang="en")
 		include brand.pug
 		include social.pug
 		include tab.pug
-		include subListSection.pug
+		include subList.pug
+		include standartPicture.pug
 		
 		script(src="js/main.js")
