--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,8 @@ $md4:479.98;
 @import "brand.scss";
 @import "social.scss";
 @import "tab.scss";
-@import "subListSection.scss"
+@import "subList.scss";
+@import "standartPicture.scss"
+
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>
