--- a/src/scss/tab.scss
+++ b/src/scss/tab.scss
@@ -25,6 +25,7 @@
   }
   @media (max-width: $md3+px) {
     display: block;
+    padding: 35px 0 0 0;
   }
 }
 
@@ -68,12 +69,31 @@
 
   &__inner {
     display: flex;
+    justify-content: space-between;
+    @media (max-width: $md3+px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__info {
+    flex: 1 1 50%;
     margin: 0px 103px 0px 0px;
     @media (max-width: $md2+px) {
       margin: 0px 50px 0px 0px;
+    }
+    @media (max-width: $md3+px) {
+      margin: 0 0 30px 0;
+    }
+  }
+
+  &__img {
+    flex: 1 1 50%;
+    img {
+      max-width: 100%;
+      @media (max-width: $md3+px) {
+        max-height: 200px;
+      }
     }
   }
 
