--- a/src/scss/subList.scss
+++ b/src/scss/subList.scss
@@ -1,14 +1,21 @@
 .sub-list {
   padding: 115px 0;
+
   &__inner {
     display: flex;
     justify-content: space-between;
+    @media (max-width: $md3+px) {
+      flex-direction: column;
+    }
   }
+
   &__image {
     flex: 0 1 50%;
-    margin: 0px 194px 0px 0px;
     @media (max-width: $md2+px) {
-      margin: 0px 100px 0px 0px;
+      margin: 0px 25px 0px 0px;
+    }
+    @media (max-width: $md3+px) {
+      margin: 0px 0px 30px 0px;
     }
   }
 
@@ -18,23 +25,32 @@
   }
 
   &__info {
-    flex: 0 1 50%;
+    flex: 0 1 415px;
+  }
+  @media (max-width: $md3+px) {
+    padding: 50px 0;
   }
 }
 
 .list-section {
   &__header {
     margin: 0px 0px 46px 0px;
-	}
-	
-	&__list {
-		li {
-			margin: 0px 0px 42px 0px;
-			&:last-child{
-				margin: 0;
-			}
-		}
-	}
+    @media (max-width: $md3+px) {
+      margin: 0px 0px 23px 0px;
+    }
+  }
+
+  &__list {
+    li {
+      margin: 0px 0px 42px 0px;
+      &:last-child {
+        margin: 0;
+      }
+      @media (max-width: $md3+px) {
+        margin: 0px 0px 21px 0px;
+      }
+    }
+  }
 }
 
 .title-content {
@@ -54,6 +70,11 @@
       height: 2px;
       background-color: #ff8b38;
     }
+
+    @media (max-width: $md3+px) {
+      padding: 0px 0px 15px 0px;
+      margin: 0px 0px 15px 0px;
+    }
   }
 
   &__text {
@@ -71,27 +92,34 @@
 .list-section-item {
   &__body {
     display: flex;
-	}
-	
-	&__icon {
-		height: 40px;
-		flex: 0 0 40px;
-		margin: 0px 34px 0px 0px;
-		border: 2px solid #ff8b38;
-		border-radius: 50%;
-		text-align: center;
-		.fa {
-			display: inline-block;
-			margin: 10px 0px 0px 2px;
-			color: #ff8b38;
-			font-size: 15px;
-		}
-	}
+  }
+
+  &__icon {
+    height: 40px;
+    flex: 0 0 40px;
+    margin: 0px 34px 0px 0px;
+    border: 2px solid #ff8b38;
+    border-radius: 50%;
+    text-align: center;
+    .fa {
+      display: inline-block;
+      margin: 10px 0px 0px 2px;
+      color: #ff8b38;
+      font-size: 15px;
+    }
+    @media (max-width: $md3+px) {
+      margin: 0px 17px 0px 0px;
+    }
+  }
 
   &__title {
-		margin: 0px 0px 12px 0px;
+    margin: 0px 0px 12px 0px;
     font-weight: 600;
     color: #212121;
+    @media (max-width: $md3+px) {
+    margin: 0px 0px 6px 0px;
+
+    }
   }
 
   &__text {
