adaptive picture section

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,6 +11,6 @@ html(lang="en")
 		include social.pug
 		include tab.pug
 		include subList.pug
-		//- include standartPicture.pug
+		include standartPicture.pug
 		
 		script(src="js/main.js")
