--- a/src/pug/standartPicture.pug
+++ b/src/pug/standartPicture.pug
@@ -7,5 +7,5 @@ section.standart-picture
 					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
 					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
 			.standart-picture__image
-				img.sub-list__photo(src="img/section1/image.png", alt="", srcset="")
+				img.sub-list__photo(src="img/picture.jpg", alt="", srcset="")
 		
