--- a/src/scss/subList.scss
+++ b/src/scss/subList.scss
@@ -11,6 +11,7 @@
 
   &__image {
     flex: 0 1 50%;
+    margin: 0px 50px 0px 0px;
     @media (max-width: $md2+px) {
       margin: 0px 25px 0px 0px;
     }
@@ -25,10 +26,13 @@
   }
 
   &__info {
-    flex: 0 1 415px;
+    flex: 0 1 50%;
+  }
+  @media (max-width: $md2+px) {
+    padding: 60px 0;
   }
   @media (max-width: $md3+px) {
-    padding: 50px 0;
+    padding: 30px 0;
   }
 }
 
