add process block

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,11 +6,13 @@ html(lang="en")
 		link(rel="stylesheet", href="css/style.css")
 		title A X I T
 	body
-		include header.pug
-		include brand.pug
-		include social.pug
-		include tab.pug
-		include subList.pug
-		include standartPicture.pug
+		include blocks/header.pug
+		include blocks/brand.pug
+		include blocks/social.pug
+		include blocks/tab.pug
+		include blocks/subList.pug
+		include blocks/standartPicture.pug
+		include blocks/process.pug
+
 		
 		script(src="js/main.js")
